Fixed the random X and O locations almost done 03/22/23