@@ -34,6 +34,7 @@ public class Model implements MessageHandler {
     this.newGame();
     this.mvcMessaging.subscribe("playerMove", this);
     this.mvcMessaging.subscribe("newGame", this);
+    this.mvcMessaging.subscribe("resetBoard", this);
       
   }
   
@@ -63,15 +64,17 @@ public class Model implements MessageHandler {
     if (messageName.equals("playerMove")) {
       // Get the position string and convert to row and col
       String position = (String)messagePayload;
-      Integer row = new Integer(position.substring(0,1));
-      Integer col = new Integer(position.substring(1,2));
+      Integer row = Integer.valueOf(position.substring(0,1));
+      Integer col = Integer.valueOf(position.substring(1,2));
       // If square is blank...
       if (this.board[row][col].equals("")) {
         // ... then set X or O depending on whose move it is
         if (this.whoseMove) {
           this.board[row][col] = "X";
+          this.whoseMove = false;
         } else {
           this.board[row][col] = "O";
+          this.whoseMove = true;
         }
         // Send the boardChange message along with the new board 
         this.mvcMessaging.notify("boardChange", this.board);
